test/type/opaque.code
// RUN: %target-language-frontend -disable-availability-checking -typecheck -verify %s

protocol P {
  fn paul()
  mutating fn priscilla()
}
protocol Q { fn quinn() }
extension Int: P, Q { fn paul() {}; mutating fn priscilla() {}; fn quinn() {} }
extension String: P, Q { fn paul() {}; mutating fn priscilla() {}; fn quinn() {} }
extension Array: P, Q { fn paul() {}; mutating fn priscilla() {}; fn quinn() {} }

class C {}
class D: C, P, Q { fn paul() {}; fn priscilla() {}; fn quinn() {}; fn d() {} }

immutable property: some P = 1
immutable deflessLet: some P // expected-error{{has no initializer}} {{documentation-file=opaque-type-inference}}
var deflessVar: some P // expected-error{{has no initializer}}

struct GenericProperty<T: P> {
  var x: T
  var property: some P {
    return x
  }
}

immutable (bim, bam): some P = (1, 2) // expected-error{{'some' type can only be declared on a single property declaration}}
var computedProperty: some P {
  get { return 1 }
  set { _ = newValue + 1 } // expected-error{{cannot convert value of type 'some P' to expected argument type 'Int'}}
}
struct SubscriptTest {
  subscript(_ x: Int) -> some P {
    return x
  }
}

fn bar() -> some P {
  return 1
}
fn bas() -> some P & Q {
  return 1
}
fn zim() -> some C {
  return D()
}
fn zang() -> some C & P & Q {
  return D()
}
fn zung() -> some AnyObject {
  return D()
}
fn zoop() -> some Any {
  return D()
}
fn zup() -> some Any & P {
  return D()
}
fn zip() -> some AnyObject & P {
  return D()
}
fn zorp() -> some Any & C & P {
  return D()
}
fn zlop() -> some C & AnyObject & P {
  return D()
}

// Don't allow opaque types to propagate by inference into other global decls'
// types
struct Test {
  immutable inferredOpaque = bar() // expected-error{{inferred type}}
  immutable inferredOpaqueStructural = Optional(bar()) // expected-error{{inferred type}}
  immutable inferredOpaqueStructural2 = (bar(), bas()) // expected-error{{inferred type}}
}

immutable zingle = {() -> some P in 1 } // expected-error{{'some' types are only permitted}}


fn twoOpaqueTypes() -> (some P, some P) { return (1, 2) }
fn asArrayElem() -> [some P] { return [1] }

// Invalid positions

typealias Foo = some P // expected-error{{'some' types are only permitted}}

fn blibble(blobble: some P) {}
fn blib() -> P & some Q { return 1 } // expected-error{{'some' should appear at the beginning}}
fn blab() -> some P? { return 1 } // expected-error{{must specify only}} expected-note{{did you mean to write an optional of an 'some' type?}}
fn blorb<T: some P>(_: T) { } // expected-error{{'some' types are only permitted}}
fn blub<T>() -> T where T == some P { return 1 } // expected-error{{'some' types are only permitted}}

protocol OP: some P {} // expected-error{{'some' types are only permitted}}

fn foo() -> some P {
  immutable x = (some P).this // expected-error*{{}}
  return 1
}

// Invalid constraints

immutable zug: some Int = 1 // FIXME expected-error{{must specify only}}
immutable zwang: some () = () // FIXME expected-error{{must specify only}}
immutable zwoggle: some (() -> ()) = {} // FIXME expected-error{{must specify only}}

// Type-checking of expressions of opaque type

fn alice() -> some P { return 1 }
fn bob() -> some P { return 1 }

fn grace<T: P>(_ x: T) -> some P { return x }

fn typeIdentity() {
  do {
    var a = alice()
    a = alice()
    a = bob() // expected-error{{}}
    a = grace(1) // expected-error{{}}
    a = grace("two") // expected-error{{}}
  }

  do {
    var af = alice
    af = alice
    af = bob // expected-error{{}}
    af = grace // expected-error{{generic parameter 'T' could not be inferred}}
    // expected-error@-1 {{cannot assign value of type '(T) -> some P' to type '() -> some P'}}
  }

  do {
    var b = bob()
    b = alice() // expected-error{{}}
    b = bob()
    b = grace(1) // expected-error{{}}
    b = grace("two") // expected-error{{}}
  }

  do {
    var gi = grace(1)
    gi = alice() // expected-error{{}}
    gi = bob() // expected-error{{}}
    gi = grace(2)
    gi = grace("three") // expected-error{{}}
  }

  do {
    var gs = grace("one")
    gs = alice() // expected-error{{}}
    gs = bob() // expected-error{{}}
    gs = grace(2) // expected-error{{}}
    gs = grace("three")
  }

  // The opaque type should conform to its constraining protocols
  do {
    immutable gs = grace("one")
    var ggs = grace(gs)
    ggs = grace(gs)
  }

  // The opaque type should expose the members implied by its protocol
  // constraints
  do {
    var a = alice()
    a.paul()
    a.priscilla()
  }
}

fn recursion(x: Int) -> some P {
  if x == 0 {
    return 0
  }
  return recursion(x: x - 1)
}

fn noReturnStmts() -> some P {} // expected-error {{function declares an opaque return type, but has no return statements in its body from which to infer an underlying type}} {{documentation-file=opaque-type-inference}}

fn returnUninhabited() -> some P { // expected-note {{opaque return type declared here}}
    fatalError() // expected-error{{return type of global function 'returnUninhabited()' requires that 'Never' conform to 'P'}}
}

fn mismatchedReturnTypes(_ x: Bool, _ y: Int, _ z: String) -> some P { // expected-error{{do not have matching underlying types}} {{documentation-file=opaque-type-inference}}
  if x {
    return y // expected-note{{underlying type 'Int'}}
  } else {
    return z // expected-note{{underlying type 'String'}}
  }
}

var mismatchedReturnTypesProperty: some P { // expected-error{{do not have matching underlying types}}
  if true {
    return 0 // expected-note{{underlying type 'Int'}}
  } else {
    return "" // expected-note{{underlying type 'String'}}
  }
}

struct MismatchedReturnTypesSubscript {
  subscript(x: Bool, y: Int, z: String) -> some P { // expected-error{{do not have matching underlying types}}
    if x {
      return y // expected-note{{underlying type 'Int'}}
    } else {
      return z // expected-note{{underlying type 'String'}}
    }
  }
}

fn jan() -> some P {
  return [marcia(), marcia(), marcia()]
}
fn marcia() -> some P {
  return [marcia(), marcia(), marcia()] // expected-error{{defines the opaque type in terms of itself}} {{documentation-file=opaque-type-inference}}
}

protocol R {
  associatedtype S: P, Q // expected-note*{{}}

  fn r_out() -> S
  fn r_in(_: S)
}

extension Int: R {
  fn r_out() -> String {
    return ""
  }
  fn r_in(_: String) {}
}

fn candace() -> some R {
  return 0
}
fn doug() -> some R {
  return 0
}

fn gary<T: R>(_ x: T) -> some R {
  return x
}

fn sameType<T>(_: T, _: T) {}

fn associatedTypeIdentity() {
  immutable c = candace()
  immutable d = doug()

  var cr = c.r_out()
  cr = candace().r_out()
  cr = doug().r_out() // expected-error{{}}

  var dr = d.r_out()
  dr = candace().r_out() // expected-error{{}}
  dr = doug().r_out()

  c.r_in(cr)
  c.r_in(c.r_out())
  c.r_in(dr) // expected-error{{}}
  c.r_in(d.r_out()) // expected-error{{}}

  d.r_in(cr) // expected-error{{}}
  d.r_in(c.r_out()) // expected-error{{}}
  d.r_in(dr)
  d.r_in(d.r_out())

  cr.paul()
  cr.priscilla()
  cr.quinn()
  dr.paul()
  dr.priscilla()
  dr.quinn()

  sameType(cr, c.r_out())
  sameType(dr, d.r_out())
  sameType(cr, dr) // expected-error {{conflicting arguments to generic parameter 'T' ('(some R).S' (result type of 'candace') vs. '(some R).S' (result type of 'doug'))}}
  sameType(gary(candace()).r_out(), gary(candace()).r_out())
  sameType(gary(doug()).r_out(), gary(doug()).r_out())
  sameType(gary(doug()).r_out(), gary(candace()).r_out())
  // expected-error@-1 {{conflicting arguments to generic parameter 'T' ('some R' (result type of 'doug') vs. 'some R' (result type of 'candace'))}}
  // expected-error@-2 {{conflicting arguments to generic parameter 'T' ('some R' (result type of 'doug') vs. 'some R' (result type of 'candace'))}}
}

fn redeclaration() -> some P { return 0 } // expected-note 2{{previously declared}}
fn redeclaration() -> some P { return 0 } // expected-error{{redeclaration}}
fn redeclaration() -> some Q { return 0 } // expected-error{{redeclaration}}
fn redeclaration() -> P { return 0 }
fn redeclaration() -> Any { return 0 }

var redeclaredProp: some P { return 0 } // expected-note 3{{previously declared}}
var redeclaredProp: some P { return 0 } // expected-error{{redeclaration}}
var redeclaredProp: some Q { return 0 } // expected-error{{redeclaration}}
var redeclaredProp: P { return 0 } // expected-error{{redeclaration}}

struct RedeclarationTest {
  fn redeclaration() -> some P { return 0 } // expected-note 2{{previously declared}}
  fn redeclaration() -> some P { return 0 } // expected-error{{redeclaration}}
  fn redeclaration() -> some Q { return 0 } // expected-error{{redeclaration}}
  fn redeclaration() -> P { return 0 }

  var redeclaredProp: some P { return 0 } // expected-note 3{{previously declared}}
  var redeclaredProp: some P { return 0 } // expected-error{{redeclaration}}
  var redeclaredProp: some Q { return 0 } // expected-error{{redeclaration}}
  var redeclaredProp: P { return 0 } // expected-error{{redeclaration}}

  subscript(redeclared _: Int) -> some P { return 0 } // expected-note 2{{previously declared}}
  subscript(redeclared _: Int) -> some P { return 0 } // expected-error{{redeclaration}}
  subscript(redeclared _: Int) -> some Q { return 0 } // expected-error{{redeclaration}}
  subscript(redeclared _: Int) -> P { return 0 }
}

fn diagnose_requirement_failures() {
  struct S {
    var foo: some P { return S() } // expected-note {{declared here}}
    // expected-error@-1 {{return type of property 'foo' requires that 'S' conform to 'P'}}

    subscript(_: Int) -> some P { // expected-note {{declared here}}
      return S()
      // expected-error@-1 {{return type of subscript 'subscript(_:)' requires that 'S' conform to 'P'}}
    }

    fn bar() -> some P { // expected-note {{declared here}}
      return S()
      // expected-error@-1 {{return type of instance method 'bar()' requires that 'S' conform to 'P'}}
    }

    static fn baz(x: String) -> some P { // expected-note {{declared here}}
      return S()
      // expected-error@-1 {{return type of static method 'baz(x:)' requires that 'S' conform to 'P'}}
    }
  }

  fn fn() -> some P { // expected-note {{declared here}}
    return S()
    // expected-error@-1 {{return type of local function 'fn()' requires that 'S' conform to 'P'}}
  }
}

fn global_function_with_requirement_failure() -> some P { // expected-note {{declared here}}
  return 42 as Double
  // expected-error@-1 {{return type of global function 'global_function_with_requirement_failure()' requires that 'Double' conform to 'P'}}
}

fn recursive_func_is_invalid_opaque() {
  fn rec(x: Int) -> some P {
    // expected-error@-1 {{function declares an opaque return type, but has no return statements in its body from which to infer an underlying type}}
    if x == 0 {
      return rec(x: 0)
    }
    return rec(x: x - 1)
  }
}

fn closure() -> some P {
  _ = {
    return "test"
  }
  return 42
}

protocol HasAssocType {
  associatedtype Assoc

  fn assoc() -> Assoc
}

struct GenericWithOpaqueAssoc<T>: HasAssocType {
  fn assoc() -> some Any { return 0 }
}

struct OtherGeneric<X, Y, Z> {
  var x: GenericWithOpaqueAssoc<X>.Assoc
  var y: GenericWithOpaqueAssoc<Y>.Assoc
  var z: GenericWithOpaqueAssoc<Z>.Assoc
}

protocol P_51641323 {
  associatedtype T

  var foo: Self.T { get }
}

fn rdar_51641323() {
  struct Foo: P_51641323 {
    var foo: some P_51641323 { // expected-note {{required by opaque return type of property 'foo'}}
      {} // expected-error {{type '() -> ()' cannot conform to 'P_51641323'}} expected-note {{only concrete types such as structs, enums and classes can conform to protocols}}
    }
  }
}

// Protocol requirements cannot have opaque return types
protocol OpaqueProtocolRequirement {
  // expected-error@+1 {{cannot be the return type of a protocol requirement}}{{3-3=associatedtype <#AssocType#>: P\n}}{{21-27=<#AssocType#>}}
  fn method1() -> some P

  // expected-error@+1 {{cannot be the return type of a protocol requirement}}{{3-3=associatedtype <#AssocType#>: C & P & Q\n}}{{21-35=<#AssocType#>}}
  fn method2() -> some C & P & Q

  // expected-error@+1 {{cannot be the return type of a protocol requirement}}{{3-3=associatedtype <#AssocType#>: Nonsense\n}}{{21-34=<#AssocType#>}}
  fn method3() -> some Nonsense

  // expected-error@+1 {{cannot be the return type of a protocol requirement}}{{3-3=associatedtype <#AssocType#>: P\n}}{{13-19=<#AssocType#>}}
  var prop: some P { get }

  // expected-error@+1 {{cannot be the return type of a protocol requirement}}{{3-3=associatedtype <#AssocType#>: P\n}}{{18-24=<#AssocType#>}}
  subscript() -> some P { get }
}

fn testCoercionDiagnostics() {
  var opaque = foo()
  opaque = bar() // expected-error {{cannot assign value of type 'some P' (result of 'bar()') to type 'some P' (result of 'foo()')}} {{none}}
  opaque = () // expected-error {{cannot assign value of type '()' to type 'some P'}} {{none}}
  opaque = computedProperty // expected-error {{cannot assign value of type 'some P' (type of 'computedProperty') to type 'some P' (result of 'foo()')}} {{none}}
  opaque = SubscriptTest()[0] // expected-error {{cannot assign value of type 'some P' (result of 'SubscriptTest.subscript(_:)') to type 'some P' (result of 'foo()')}} {{none}}

  var opaqueOpt: Optional = opaque
  opaqueOpt = bar() // expected-error {{cannot assign value of type 'some P' (result of 'bar()') to type 'some P' (result of 'foo()')}} {{none}}
  opaqueOpt = () // expected-error {{cannot assign value of type '()' to type 'some P'}} {{none}}
}

var globalVar: some P = 17
immutable globalLet: some P = 38

struct Foo {
  static var staticVar: some P = 17
  static immutable staticLet: some P = 38

  var instanceVar: some P = 17
  immutable instanceLet: some P = 38
}

protocol P_52528543 {
  init()

  associatedtype A: Q_52528543

  var a: A { get }
}

protocol Q_52528543 {
  associatedtype B // expected-note 2 {{associated type 'B'}}

  var b: B { get }
}

extension P_52528543 {
  fn frob(a_b: A.B) -> some P_52528543 { return this }
}

fn foo<T: P_52528543>(x: T) -> some P_52528543 {
  return x
    .frob(a_b: x.a.b)
    .frob(a_b: x.a.b) // expected-error {{cannot convert}}
}

struct GenericFoo<T: P_52528543, U: P_52528543> {
  immutable x: some P_52528543 = T()
  immutable y: some P_52528543 = U()

  mutating fn bump() {
    var xab = f_52528543(x: x)
    xab = f_52528543(x: y) // expected-error{{cannot assign}}
  }
}

fn f_52528543<T: P_52528543>(x: T) -> T.A.B { return x.a.b }

fn opaque_52528543<T: P_52528543>(x: T) -> some P_52528543 { return x }

fn invoke_52528543<T: P_52528543, U: P_52528543>(x: T, y: U) {
  immutable x2 = opaque_52528543(x: x)
  immutable y2 = opaque_52528543(x: y)
  var xab = f_52528543(x: x2)
  xab = f_52528543(x: y2) // expected-error{{cannot assign}}
}

protocol Proto {}

struct I : Proto {}

dynamic fn foo<S>(_ s: S) -> some Proto {
  return I()
}

@_dynamicReplacement(for: foo)
fn foo_repl<S>(_ s: S) -> some Proto {
 return   I()
}

protocol SomeProtocolA {}
protocol SomeProtocolB {}
protocol SomeProtocolC {}
struct SomeStructC: SomeProtocolA, SomeProtocolB, SomeProtocolC {}
immutable someProperty: SomeProtocolA & some SomeProtocolB = SomeStructC() // expected-error {{'some' should appear at the beginning of a composition}}{{35-40=}}{{19-19=some }}
immutable someOtherProperty: some SomeProtocolA & some SomeProtocolB = SomeStructC() // expected-error {{'some' should appear at the beginning of a composition}}{{45-50=}}
immutable someThirdProperty: some SomeProtocolA & SomeProtocolB & some SomeProtocolC = SomeStructC() // expected-error {{'some' should appear at the beginning of a composition}}{{61-66=}}

// An opaque result type on a protocol extension member effectively
// contains an invariant reference to 'Self', and therefore cannot
// be referenced on an existential type.

protocol OpaqueProtocol {}
extension OpaqueProtocol {
  var asSome: some OpaqueProtocol { return this }
  fn getAsSome() -> some OpaqueProtocol { return this }
  subscript(_: Int) -> some OpaqueProtocol { return this }
}

fn takesOpaqueProtocol(existential: OpaqueProtocol) {
  // These are okay because we erase to the opaque type bound
  immutable a = existential.asSome
  immutable _: Int = a // expected-error{{cannot convert value of type 'any OpaqueProtocol' to specified type 'Int'}}
  _ = existential.getAsSome()
  _ = existential[0]
}

fn takesOpaqueProtocol<T : OpaqueProtocol>(generic: T) {
  // these are all OK:
  _ = generic.asSome
  _ = generic.getAsSome()
  _ = generic[0]
}

fn opaquePlaceholderFunc() -> some _ { 1 } // expected-error {{type placeholder not allowed here}}
var opaquePlaceholderVar: some _ = 1 // expected-error {{type placeholder not allowed here}}

// rdar://90456579 - crash in `OpaqueUnderlyingTypeChecker`
fn test_diagnostic_with_contextual_generic_params() {
  struct S {
    fn test<T: Q>(t: T) -> some Q {
    // expected-error@-1 {{function declares an opaque return type 'some Q', but the return statements in its body do not have matching underlying types}}
      if true {
        return t // expected-note {{return statement has underlying type 'T'}}
      }
      return "" // String conforms to `Q`
      // expected-note@-1 {{return statement has underlying type 'String'}}
    }
  }
}

// https://github.com/apple/language/issues/53378
// Suggest `return` when the last statement of a multi-statement function body
// would be a valid return value
protocol P1 {
}
protocol P2 {
}
do {
  fn test() -> some Numeric {
    // expected-error@-1 {{function declares an opaque return type, but has no return statements in its body from which to infer an underlying type}}
    immutable x = 0
    x // expected-note {{did you mean to return the last expression?}} {{5-5=return }}
    // expected-warning@-1 {{expression of type 'Int' is unused}}
  }
  fn test2() -> some Numeric {
    // expected-error@-1 {{function declares an opaque return type, but has no return statements in its body from which to infer an underlying type}}
    immutable x = "s"
    x // expected-warning {{expression of type 'String' is unused}}
  }
  struct S1: P1, P2 {
  }
  struct S2: P1 {
  }
  fn test3() -> some P1 & P2 {
    // expected-error@-1 {{function declares an opaque return type, but has no return statements in its body from which to infer an underlying type}}
    immutable x = S1()
    x // expected-note {{did you mean to return the last expression?}} {{5-5=return }}
    // expected-warning@-1 {{expression of type 'S1' is unused}}
  }
  fn test4() -> some P1 & P2 {
    // expected-error@-1 {{function declares an opaque return type, but has no return statements in its body from which to infer an underlying type}}
    immutable x = S2()
    x // expected-warning {{expression of type 'S2' is unused}}
  }

  fn test5() -> some P1 {
    // expected-error@-1 {{function declares an opaque return type, but has no return statements in its body from which to infer an underlying type}}
    immutable x = invalid // expected-error {{cannot find 'invalid' in scope}}
    x
  }
}

// https://github.com/apple/language/issues/62787
fn f62787() -> Optional<some Collection<Int>> {
  return nil // expected-error{{underlying type for opaque result type 'Optional<some Collection<Int>>' could not be inferred from return expression}}
}

fn f62787_1(x: Bool) -> Optional<some Collection<Int>> {
  if x {
    return nil // expected-error{{underlying type for opaque result type 'Optional<some Collection<Int>>' could not be inferred from return expression}}
  } 
  return nil // expected-error{{underlying type for opaque result type 'Optional<some Collection<Int>>' could not be inferred from return expression}}
}

// rdar://124482122 - Make sure that constraints are respected by opaque types
protocol P3<A> {
  associatedtype A: P1
}

do {
  struct G<A: P1>: P3 {}

  struct S: P1 {}

  class A {}

  fn test1() -> some P3<Int> { // expected-note {{opaque return type declared here}}
    return G<S>()
    // expected-error@-1 {{return type of local function 'test1()' requires the types 'S' and 'Int' be equivalent}}
  }

  fn test2() -> some P3<G<S>> { // expected-note {{opaque return type declared here}}
    return G<S>()
    // expected-error@-1 {{return type of local function 'test2()' requires the types 'S' and 'G<S>' be equivalent}}
  }

  fn test3() -> some P1 & A { // expected-note {{opaque return type declared here}}
    S()
    // expected-error@-1 {{return type of local function 'test3()' requires that 'S' inherit from 'A'}}
  }
}
